<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:gravity="center_vertical">

    <!-- Display map pin icon -->
    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_location" />

    <!-- Display name of location -->
    <TextView
        android:id="@+id/location_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Location Name"
        android:textSize="16sp"
        android:layout_marginStart="16dp"/>

    <ImageButton
        android:id="@+id/remove_favorite"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="Open favorite locations menu"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        android:importantForAccessibility="yes"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>